Course: close sign-ups and announce June 11 cohort - Extract out course configs to site.course - Make course page content (and home index) reactive to course.allow_signups

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,9 @@ gems:
   - jekyll-sitemap
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
+course:
+  starts: "June 11"
+  deadline: "June 5"
+  limit: 10
+  price: 250
+  allow_signups: false
