Close signups and announce next group: August 13

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "July 16" # has to be a Sunday
-  deadline: "July 10" # has to be a Monday
+  starts: "August 13" # has to be a Sunday
+  deadline: "August 7" # has to be a Monday
   limit: 5
   price: 350
-  allow_signups: true
+  allow_signups: false
