--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "November 12th" # has to be a Sunday
-  deadline: "November 6th" # has to be a Monday
+  starts: "November 26th" # has to be a Sunday
+  deadline: "November 20th" # has to be a Monday
   limit: 5
-  price: 300
-  allow_signups: false
+  price: 400
+  allow_signups: true
