--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "November 26th" # has to be a Sunday
-  deadline: "November 20th" # has to be a Monday
+  starts: "January 14th" # has to be a Sunday
+  deadline: "January 8th" # has to be a Monday
   limit: 5
   price: 400
-  allow_signups: true
+  allow_signups: false
