--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,9 @@ course:
   limit: 5
   price: 400
   allow_signups: false
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      lang: en
