Course: open signups, move start date

--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "June 3rd" # has to be a Sunday
-  starts_fr: "3 juin"
-  deadline: "May 28th" # has to be a Monday
-  deadline_fr: "28 mai" # has to be a Monday
+  starts: "June 10rd" # has to be a Sunday
+  starts_fr: "10 juin"
+  deadline: "June 4th" # has to be a Monday
+  deadline_fr: "4 juin" # has to be a Monday
   limit: 5
   price: 400
-  allow_signups: false
+  allow_signups: true
 defaults:
   -
     scope:
