--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "June 10th" # has to be a Sunday
-  starts_fr: "10 juin"
-  deadline: "June 4th" # has to be a Monday
-  deadline_fr: "4 juin" # has to be a Monday
+  starts: "July 15th" # has to be a Sunday
+  starts_fr: "15 juin"
+  deadline: "July 9th" # has to be a Monday
+  deadline_fr: "9 juillet" # has to be a Monday
   limit: 5
   price: 400
   allow_signups: true
