GitHub pages: Add .well-known to included paths

--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,4 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       lang: en
+include: [".well-known"]
