course: add new dates

--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "October 28th" # has to be a Sunday
-  starts_fr: "28 octobre"
-  deadline: "October 22nd" # has to be a Monday
-  deadline_fr: "22 octobre" # has to be a Monday
+  starts: "December 2nd" # has to be a Sunday
+  starts_fr: "2 décembre"
+  deadline: "November 26th" # has to be a Monday
+  deadline_fr: "26 novembre" # has to be a Monday
   limit: 5
   price: 400
-  allow_signups: true
+  allow_signups: false
 defaults:
   -
     scope:
