course: disable signups

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ course:
   deadline_fr: "26 novembre" # has to be a Monday
   limit: 5
   price: 400
-  allow_signups: true
+  allow_signups: false
 defaults:
   -
     scope:
