--- a/_config.yml
+++ b/_config.yml
@@ -24,5 +24,5 @@ defaults:
       path: "" # an empty string here means all files in the project
     values:
       lang: en
-include: [".well-known"]
+include: [".well-known", "_redirects"]
 
