--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@ gems:
 destination: public
 exclude: [public, Gemfile, Gemfile.lock, Rakefile, README.md]
 course:
-  starts: "January 13th" # has to be a Sunday
-  starts_fr: "13 janvier"
-  deadline: "January 7th" # has to be a Monday
-  deadline_fr: "7 janvier" # has to be a Monday
+  starts: "February 17th" # has to be a Sunday
+  starts_fr: "17 février"
+  deadline: "February 11" # has to be a Monday
+  deadline_fr: "11 février" # has to be a Monday
   limit: 5
   price: 400
-  allow_signups: true
+  allow_signups: false
 defaults:
   -
     scope:
