tweak the order of archived projects, title, and url

--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,13 @@ collections:
   archived:
     output: true
     permalink: /archived/:path/
+    order:
+      - hotwiremigration-pascal-works.md
+      - bullettrain-pascal-works.md
+      - chartdescriptions-com.md
+      - customcharts-dev.md
+      - supercharts-dev.md
+      - transmissiontheme-com.md
+      - stimulus-pascal-works.md
 
 mastodon: https://ruby.social/@pascallaliberte
