retire change-anything, language-of-objectives

--- a/_config.yml
+++ b/_config.yml
@@ -38,5 +38,7 @@ collections:
       - supercharts-dev.md
       - stimulus-pascal-works.md
       - modestjs-works.md
+      - change-anything.md
+      - language-of-objectives.md
 
 mastodon: https://ruby.social/@pascallaliberte
