--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ collections:
       - supercharts-dev.md
       - stimulus-pascal-works.md
       - modestjs-works.md
+      - wp-developer.md
       - change-anything.md
       - language-of-objectives.md
 
